tests/reference/asr-doloop_01-bb1c596.stderr
semantic error: Start expression in DO loop must be integer
 --> tests/warnings/doloop_01.f90:4:12
  |
4 |     do i = 1.5, 10.5, 2.4
  |            ^^^ 
